apps/production/navidrome/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: navidrome
  namespace: navidrome
spec:
  ingressClassName: traefik
  rules:
    - host: navidrome.natetech.org
      http:
        paths:
          - backend:
              service:
                name: navidrome
                port:
                  number: 4533
            path: /
            pathType: Prefix
  tls:
  - hosts:
    - navidrome.natetech.org
    secretName: navidrome-certificate-secret
